# x20chatS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  architecture.md  peer_discovery.md  tui.md  usage.md
scripts/: README.md
src/: README.md  __init__.py  main.py
src/p2p_texting/: __init__.py  cli.py  messaging.py  peer.py  peer_discovery.py  tui.py
tests/: README.md  test_file_transfer.py  test_p2p.py  test_tui_integration.py
